--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -185,6 +185,11 @@ body {
 	min-height: 300px;
 	background-color: #FFF;
 	border-top: 1px solid #E1E1E1;
+	border-left	: 1px solid #E1E1E1;
+}
+#J_editor .tab {
+	background-color: #F7F7F7;
+	padding-left: 28px;
 }
 #J_editor .tab li {
 	float: left;
@@ -192,8 +197,20 @@ body {
 	line-height: 30px;
 	font-size: 14px;
 	border-right: 1px solid #E1E1E1;
+	border-left: 1px solid #E1E1E1;
+	margin-right: -1px;
 	cursor: pointer;
+}
+#J_editor .tab li.current {
+	background-color: #FFF;
 }
 #J_editor .tab li:hover {
 
+}
+.editor-item {
+	display: none;
+	height: 300px;
+}
+#J_htmlEditor {
+	display: block;
 }
