--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -79,6 +79,7 @@ body {
 	width: 220px;
 	background-color: #FFF;
 	position: absolute;
+	left: 0;
 	border: 1px solid #E1E1E1;
 	border-width: 1px 1px 0px 0px;
 	margin-top: 10px;
@@ -139,6 +140,9 @@ body {
 .external_resources_list li {
 	padding: 5px 3px;
 }
+.external_resources_list .resource-item {
+	*float: left;
+}
 .external_resources_list a,
 .external_resources_list a:visited {
 	color: #5AA4D7;
@@ -194,6 +198,7 @@ body {
 #J_editor .tab {
 	background-color: #F7F7F7;
 	padding-left: 29px;
+	*zoom: 1;
 }
 #J_editor .tab li {
 	float: left;
