--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -237,3 +237,13 @@ body {
 #J_version {
 	display: none;
 }
+
+.console-linenumbers {
+	width: 29px;
+	height: 300px;
+	border-right: 1px solid #DDD;
+	background-color: #F7F7F7;
+	position: absolute;
+	left: 0
+	top: 0;
+}
