--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -238,12 +238,37 @@ body {
 	display: none;
 }
 
-.console-linenumbers {
-	width: 29px;
-	height: 300px;
-	border-right: 1px solid #DDD;
-	background-color: #F7F7F7;
-	position: absolute;
-	left: 0
-	top: 0;
+#J_console {
+	background: url(../img/sprites.png) repeat-y -40px 0;
+	padding: 4px 0;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.console-wrap p {
+	line-height: 2em;
+	color: #000;
+	font-family: "Inconsolata", "Monaco", "Consolas", "Andale Mono", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+	margin-left: 30px;
+	border-bottom: 1px solid #E1E1E1;
+}
+.console-wrap .linenumber {
+	width: 26px;
+	padding-right: 3px;
+	margin-right: 4px;
+	margin-left: -30px;
+	display: inline-block;
+	text-align: right;
+	color: #999;
+}
+.console-wrap .event {
+	background-color: #A7CC25;
+	margin-right: 5px;
+}
+.console-wrap .fn {
+	background-color: #A6C9D7;
+	margin-right: 5px;
+}
+.console-wrap .info {
+	background-color: #89D;
+	margin-right: 5px;
 }
