--- a/assets/css/demobeautify.css
+++ b/assets/css/demobeautify.css
@@ -42,6 +42,8 @@ html {
     padding-left: 5px;
     border-left: 3px solid #A7A7A7;
     color: #3C70A5;
+    font-weight: bold;
+    text-shadow: 0 0;
 }
 .console-wrap {
     display: none;
